--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&family=Roboto:ital,wght@0,100;0,500;0,700;1,300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300@500&family=Roboto:ital,wght@0,100;0,500;0,700;1,300&display=swap" rel="stylesheet">
  
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
